package games.paperDino;

public enum Activity {
	wandering,
	resting,
	hangry;
}
