package games.paperDino;

import org.newdawn.slick.GameContainer;
import org.newdawn.slick.Graphics;
import org.newdawn.slick.state.StateBasedGame;

public class Piece {

	private Entity entity;
	private boolean walkable;

	public void render(GameContainer container, StateBasedGame game, Graphics context) {}

}
