package games.paperDino;

public enum SpeciesColor {
	red,
	blue;
}
